`Fail (FieldNotFound "x")`. This involved adding a HUpdateAtLabel
class and HTPupdateAtLabel type which hides the `n` type
variable.

Reduce the number of parameters to HMapCxt. The old version could
be defined in terms of the new version as:

	type HMapCxt_old f a b ha hb = (HMapCxt f a b,
																	HList a ~ ha,
																	HList b ~ hb)

Reimplement RecordValues in terms of HMap.

Add hMapR and hMapV to map over the values in a Record or the
value in a Variant respectively. These functions are defined in
terms of HFmap which may be useful on it's own.

Add a typeable instance for Label3, and change examples/cmdargs.hs
to use this label kind. This allows the example to work with
ghc-7.8.2 which lacks an instance Typeable (x :: Symbol).

28 Mar 2014
	Release 0.3.4.1
	Fix build with ghc-7.8 broken by changes in HList 0.3.4

20 Feb 2014
	Release 0.3.4
	RecordPuns add ( ) syntax
	Use the tagged package: this removes LVPair and lowercase proxy.

03 Feb 2014
    Release 0.3.2.0
	Relax hspec dependency

29 Jan 2014
	Release 0.3.1.0
	Work with newer GHC.TypeLits (SingI and similar were moved out)

05 Nov 2013
	Release 0.3.0.1
	fix `cabal test'

01 Nov 2013
	Release 0.3
	pun quasiquote supports nested records
	remove HStagedEq

30 Oct 2013
	Another large patch from Adam Vogt
	Connect HList with Lens. The Data instance for HList
	treats HList as a list; a Data instance for HListFlat
	treats HList as a tuple.

24 Oct 2013
	Another large patch from Adam Vogt
	Added HFoldl, HScanr, Data instances for HList, finished the
	update of Record, the Keyword example
	becomes full-fledged part of HList

17 Sep 2013
	Another large patch from Adam Vogt
	Added HReplicate, SameLength constraint (used by HSequence and HMap),
	FunCxt for interpreting context applications,
	convenient syntax for record patterns,
	clean-up of ApplyAB and general clean-up

31 Aug 2013
	Large patch from Adam Vogt
	 Improving the Apply class (ApplyAB) to help type inference